# readandtalk_automation

./: .env  README.md  crawling.py  main.py  pyproject.toml  report.py
